--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@
 .idea/**/dictionaries
 .idea/**/shelf
 misc.xml
+.idea/.gitignore
+.idea/compiler.xml
+.idea/modules.xml
+.zinsData.iml
 
 # AWS User-specific
 .idea/**/aws.xml
